--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.2",
+    "datatables.net-dt": "^1.13.8",
     "dotenv": "^16.3.1",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
